<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FsoTV</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">DirecTV logo</string>
    <string name="btn_channel">Channels</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_record">Record</string>
    <string name="btn_social">Social</string>

    <!-- String in video detail screen -->
    <string name="title_activity_video_detail">VideoDetailActivity</string>
    <string name="video_detail">Video details</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_browse_channels">Browse Channels</string>
    <string name="title_activity_browse_videos">Browse Videos</string>
    <string name="title_activity_my_channels">My Channels</string>
    <string name="title_activity_demo">DemoActivity</string>

    <!-- Strings on Video Detail screen -->
    <string name="image_thumbnail_content_description">Thumbnail</string>
    <string name="text_view_title">Title</string>
    <string name="text_view_uploaded">Uploaded</string>
    <string name="text_view_views_count">ViewCount</string>
    <string name="text_view_description">Description:</string>
    <string name="title_activity_watch_video">Watch Video</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_view_duration">Duration:</string>
    <string name="btnSearch">Search Video</string>
    <string name="btn_browse_channels">Browse Channels</string>
    <string name="btn_browse_videos">Browse Videos</string>
    <string name="btn_my_channels">My Channels</string>
    <string name="btn_my_videos">My Videos</string>
    <string name="btn_watch">Watch</string>
    <string name="btn_comment">Comment</string>
    <string name="btn_share">Share</string>
    <string name="title_activity_my_videos">My Videos</string>
    <string name="btn_search">Search</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_search_hint">Text to search</string>
    <string name="title_activity_category">Category</string>
    <string name="btn_save">Save</string>
    <string name="btn_ok">Ok</string>
    <string name="text_view_view">Views:</string>
    <string name="browse_video_views">Views:</string>
    <string name="browse_video_favorites">Favorites:</string>
    <string name="browse_video_duration">Duration:</string>
    <string name="browse_video_publishday">Published:</string>
    <string name="btn_sort">Sort</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_home_tablet">Home</string>
    <string name="title_activity_favorite_tablet">Favorite</string>
    <string name="title_activity_browse_tablet">Browse</string>
    <string name="title_activity_videos_tablet">Videos</string>
    <string name="title_activity_comments_tablet">Comments</string>
    <string name="search_hint">Type to search</string>
    <string name="title_activity_video_description">Video Description</string>
    <string name="lbl_facebook_message">Message:</string>

</resources>