<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fsotv_background"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" 
    android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/hqdefault"
                android:contentDescription="@string/image_thumbnail_content_description"
                android:paddingRight="50sp" />

            <TextView
                android:id="@+id/txtvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/text_view_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_brief_infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblViewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Views: "
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtvViewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lblViewCount"
                android:text="@string/text_view_views_count"
                android:textColor="@android:color/background_light"
                android:textSize="13sp" />

            <RatingBar
                android:id="@+id/rtbRate"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtvViewCount"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.0"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/txtvUploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_view_uploaded"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
        </RelativeLayout>
		<LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Duration"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/text_view_description"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtvDescriptionContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/text_view_description"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_command"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/bttWatch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onWatchClick"
                android:text="@string/button_watch" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>