<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideosTabletActivity" >

    <include layout="@layout/header_tablet_loading" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/lvVideo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" >
        </ListView>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/lvVideo" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dip"
                android:paddingRight="10dip" >

                <LinearLayout
                    android:id="@+id/layout_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgThumbnail"
                        android:layout_width="300dip"
                        android:layout_height="250dip"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_thumbnail_content_description" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_title"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <!-- Statistic -->

                    <LinearLayout
                        android:id="@+id/llStatistic1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/browse_video_views"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/viewCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:text="0"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:text="@string/browse_video_favorites"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/favoriteCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:text="0"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llStatistic2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/llStatistic1"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/browse_video_duration"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:text="0"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:text="Published: "
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/published"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:text="0"
                            android:textColor="@android:color/background_light"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <!-- Action -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btnWatch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="onWatchClick"
                            android:text="@string/button_watch" />

                        <Button
                            android:id="@+id/btnComments"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="onCommentsClick"
                            android:text="Comments" />

                        <Button
                            android:id="@+id/btnShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:onClick="onShareClick"
                            android:text="Share" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/rtbRate"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtvViewCount"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="3.0"
                        android:stepSize="0.1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/text_view_description"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtvDescriptionContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/text_view_description"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>